--- a/index.html
+++ b/index.html
@@ -554,5 +554,12 @@
     saveState(); saveSettings();
 
   </script>
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./service-worker.js')
+      .then(() => console.log('Service Worker registered successfully'))
+      .catch((error) => console.log('Service Worker registration failed:', error));
+  }
+</script>
 </body>
 </html>
