--- a/index.html
+++ b/index.html
@@ -6,148 +6,164 @@
   <title>Today's Routine — ADHD Friendly</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    :root{
-      --bg:#f7f8fb;
-      --card:#ffffff;
-      --muted:#6b7280;
-      --text:#0f172a;
-      --accent:#6366f1;
-      --accent-2:#7c3aed;
-      --success:#10b981;
-      --danger:#ef4444;
-      --glass: rgba(255,255,255,0.6);
-      --shadow: 0 6px 18px rgba(16,24,40,0.06);
-      --radius:14px;
-      --task-height:64px;
-      --btn-bg: linear-gradient(90deg,var(--accent),var(--accent-2));
-      --btn-text: #fff;
-      --input-border: rgba(0,0,0,0.06);
-    }
-    [data-theme="dark"]{
-      --bg:#0b1220;
-      --card:#071025;
-      --muted:#94a3b8;
-      --text:#e6eef8;
-      --accent:#6d28d9;
-      --accent-2:#4f46e5;
-      --success:#34d399;
-      --danger:#fb7185;
-      --glass: rgba(255,255,255,0.03);
-      --shadow: 0 8px 30px rgba(2,6,23,0.7);
-      --btn-bg: linear-gradient(90deg,var(--accent-2),var(--accent));
-      --btn-text: #fff;
-      --input-border: rgba(255,255,255,0.06);
-    }
+  :root {
+    --bg:#f7f8fb;
+    --card:#ffffff;
+    --muted:#6b7280;
+    --text:#0f172a;
+    --accent:#6366f1;
+    --accent-2:#7c3aed;
+    --success:#10b981;
+    --danger:#ef4444;
+    --glass: rgba(255,255,255,0.6);
+    --shadow: 0 6px 18px rgba(16,24,40,0.06);
+    --radius:14px;
+    --task-height:64px;
+    --btn-bg: linear-gradient(90deg,var(--accent),var(--accent-2));
+    --btn-text: #fff;
+    --input-border: rgba(0,0,0,0.06);
+  }
+  [data-theme="dark"] {
+    --bg:#0b1220;
+    --card:#071025;
+    --muted:#94a3b8;
+    --text:#e6eef8;
+    --accent:#6d28d9;
+    --accent-2:#4f46e5;
+    --success:#34d399;
+    --danger:#fb7185;
+    --glass: rgba(255,255,255,0.03);
+    --shadow: 0 8px 30px rgba(2,6,23,0.7);
+    --btn-bg: linear-gradient(90deg,var(--accent-2),var(--accent));
+    --btn-text: #fff;
+    --input-border: rgba(255,255,255,0.06);
+  }
 
-    *{box-sizing:border-box}
-    html,body{height:100%;}
-    body{
-      margin:0;
-      font-family:'Poppins',system-ui,Segoe UI,Arial;
-      background:linear-gradient(180deg,var(--bg),transparent);
-      color:var(--text);
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      padding:20px;
-    }
+  * { box-sizing:border-box }
+  html,body { height:100%; }
+  body {
+    margin:0;
+    font-family:'Poppins',system-ui,Segoe UI,Arial;
+    background:linear-gradient(180deg,var(--bg),transparent);
+    color:var(--text);
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    padding:20px;
+  }
 
-    .app{
-      max-width:980px;
-      margin:12px auto;
-      display:grid;
-      grid-template-columns:1fr 360px;
-      gap:20px;
-    }
+  .app {
+    max-width: 100%;
+    margin: 12px auto;
+    display: grid;
+    grid-template-columns: 1fr minmax(280px, 360px);
+    gap: 20px;
+    padding: 0 10px;
+  }
 
-    .panel{
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:18px;
-    }
+  .panel {
+    background:var(--card);
+    border-radius:var(--radius);
+    box-shadow:var(--shadow);
+    padding:18px;
+  }
 
-    header.app-header{
-      display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;
-    }
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{
-      width:44px;height:44px;border-radius:10px;background:var(--btn-bg);display:flex;align-items:center;justify-content:center;color:var(--btn-text);font-weight:700;font-size:18px;box-shadow:0 6px 18px rgba(99,102,241,0.12);
-    }
-    h1{font-size:18px;margin:0}
-    .controls{display:flex;gap:8px;align-items:center}
-    .btn{
-      background:transparent;border:1px solid rgba(0,0,0,0.06);padding:8px 12px;border-radius:10px;font-weight:600;cursor:pointer;font-size:13px;color:var(--text);
-    }
-    [data-theme="dark"] .btn{border:1px solid rgba(255,255,255,0.04)}
-    .primary{
-      background:var(--btn-bg);color:var(--btn-text);border:none;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;
-    }
+  header.app-header {
+    display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;
+  }
+  .brand { display:flex;gap:12px;align-items:center }
+  .logo {
+    width:44px;height:44px;border-radius:10px;background:var(--btn-bg);display:flex;align-items:center;justify-content:center;color:var(--btn-text);font-weight:700;font-size:18px;box-shadow:0 6px 18px rgba(99,102,241,0.12);
+  }
+  h1 { font-size:18px;margin:0 }
+  .controls { display:flex;gap:8px;align-items:center }
+  .btn {
+    background:transparent;border:1px solid rgba(0,0,0,0.06);padding:8px 12px;border-radius:10px;font-weight:600;cursor:pointer;font-size:13px;color:var(--text);
+  }
+  [data-theme="dark"] .btn { border:1px solid rgba(255,255,255,0.04) }
+  .primary {
+    background:var(--btn-bg);color:var(--btn-text);border:none;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;
+  }
 
-    .now-card{
-      display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;padding:22px;border-radius:12px;margin-bottom:12px;background:linear-gradient(90deg,rgba(99,102,241,0.08),rgba(124,58,237,0.06));
-    }
-    .now-title{font-size:12px;color:var(--muted);margin-bottom:6px}
-    .now-task{font-size:22px;font-weight:700}
-    .now-time{font-size:13px;color:var(--muted);margin-top:6px}
+  .now-card {
+    display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;padding:22px;border-radius:12px;margin-bottom:12px;background:linear-gradient(90deg,rgba(99,102,241,0.08),rgba(124,58,237,0.06));
+  }
+  .now-title { font-size:12px;color:var(--muted);margin-bottom:6px }
+  .now-task { font-size:22px;font-weight:700 }
+  .now-time { font-size:13px;color:var(--muted);margin-top:6px }
 
-    .list-wrap{height:calc(100vh - 340px);overflow:auto;padding-right:6px}
-    .task-item{
-      display:flex;align-items:center;justify-content:space-between;padding:10px 12px;border-radius:10px;margin-bottom:10px;height:var(--task-height);background:linear-gradient(180deg,var(--card),var(--glass));transition:transform .35s cubic-bezier(.2,.9,.2,1),opacity .25s ease,box-shadow .2s ease;
-      box-shadow: 0 6px 12px rgba(2,6,23,0.03);
-    }
-    [data-theme="dark"] .task-item{box-shadow:0 6px 18px rgba(2,6,23,0.5)}
-    .task-left{display:flex;gap:12px;align-items:center}
-    .time-pill{min-width:110px;padding:8px 10px;border-radius:8px;background:rgba(0,0,0,0.03);font-weight:600}
-    [data-theme="dark"] .time-pill{background:rgba(255,255,255,0.03)}
-    .task-name{font-weight:600}
-    .task-actions{display:flex;gap:6px}
-    .tiny{font-size:12px;padding:6px 8px;border-radius:8px}
+  .list-wrap {
+    flex-grow: 1;
+    min-height: 200px;
+    overflow: auto;
+    padding-right: 6px;
+  }
 
-    .upcoming-card{padding:12px;border-radius:12px;margin-top:6px;background:linear-gradient(180deg,var(--card),var(--glass));}
-    .up-title{font-weight:700;margin:0 0 8px 0}
-    .up-list{max-height:180px;overflow:auto}
-    .up-item{display:flex;justify-content:space-between;padding:8px 6px;border-radius:8px}
-    .muted{color:var(--muted)}
+  .task-item {
+    display:flex;align-items:center;justify-content:space-between;padding:10px 12px;border-radius:10px;margin-bottom:10px;height:var(--task-height);background:linear-gradient(180deg,var(--card),var(--glass));transition:transform .35s cubic-bezier(.2,.9,.2,1),opacity .25s ease,box-shadow .2s ease;
+    box-shadow: 0 6px 12px rgba(2,6,23,0.03);
+  }
+  [data-theme="dark"] .task-item { box-shadow:0 6px 18px rgba(2,6,23,0.5) }
+  .task-left { display:flex;gap:12px;align-items:center }
+  .time-pill { min-width:110px;padding:8px 10px;border-radius:8px;background:rgba(0,0,0,0.03);font-weight:600 }
+  [data-theme="dark"] .time-pill { background:rgba(255,255,255,0.03) }
+  .task-name { font-weight:600 }
+  .task-actions { display:flex;gap:6px }
+  .tiny { font-size:12px;padding:6px 8px;border-radius:8px }
 
-    .sidebar{display:flex;flex-direction:column;gap:12px}
-    .routines{display:flex;gap:8px;align-items:center}
-    select{padding:10px;border-radius:10px;border:1px solid var(--input-border);background:transparent;color:var(--text)}
-    .mini{font-size:13px}
+  .upcoming-card { padding:12px;border-radius:12px;margin-top:6px;background:linear-gradient(180deg,var(--card),var(--glass)); }
+  .up-title { font-weight:700;margin:0 0 8px 0 }
+  .up-list { max-height:180px;overflow:auto }
+  .up-item { display:flex;justify-content:space-between;padding:8px 6px;border-radius:8px }
+  .muted { color:var(--muted) }
 
-    .add-btn{display:block;width:100%;padding:12px;border-radius:10px;background:var(--btn-bg);color:var(--btn-text);font-weight:700;border:none;cursor:pointer}
+  .sidebar { display:flex;flex-direction:column;gap:12px }
+  .routines { display:flex;gap:8px;align-items:center }
+  select { padding:10px;border-radius:10px;border:1px solid var(--input-border);background:transparent;color:var(--text) }
+  .mini { font-size:13px }
 
-    .settings{padding:12px;border-radius:10px;background:linear-gradient(180deg,var(--card),var(--glass))}
-    .setting-row{display:flex;justify-content:space-between;align-items:center;padding:8px 0}
+  .add-btn { display:block;width:100%;padding:12px;border-radius:10px;background:var(--btn-bg);color:var(--btn-text);font-weight:700;border:none;cursor:pointer }
 
-    input[type="text"],input[type="time"],select{padding:10px;border-radius:8px;border:1px solid var(--input-border);background:transparent;color:var(--text)}
-    .muted-sm{color:var(--muted);font-size:13px}
-    .divider{height:1px;background:var(--input-border);margin:10px 0;border-radius:4px}
+  .settings { padding:12px;border-radius:10px;background:linear-gradient(180deg,var(--card),var(--glass)) }
+  .setting-row { display:flex;justify-content:space-between;align-items:center;padding:8px 0 }
 
-    .modal-backdrop{position:fixed;inset:0;background:rgba(2,6,23,0.55);display:flex;align-items:center;justify-content:center;z-index:60}
-    .modal{width:520px;background:var(--card);border-radius:12px;padding:18px}
+  input[type="text"],input[type="time"],select { padding:10px;border-radius:8px;border:1px solid var(--input-border);background:transparent;color:var(--text) }
+  .muted-sm { color:var(--muted);font-size:13px }
+  .divider { height:1px;background:var(--input-border);margin:10px 0;border-radius:4px }
 
-    @media (max-width:880px){
-      .app{grid-template-columns:1fr;}
-      .list-wrap{height:calc(100vh - 520px)}
-      .sidebar{order:2}
-    }
+  .modal-backdrop { position:fixed;inset:0;background:rgba(2,6,23,0.55);display:flex;align-items:center;justify-content:center;z-index:60 }
+  .modal { width:90%; max-width:520px; background:var(--card);border-radius:12px;padding:18px }
 
-    .task-list{position:relative}
-    .move-anim{transition:transform .45s cubic-bezier(.2,.9,.2,1),opacity .3s ease}
+  @media (max-width:880px) {
+    .app { grid-template-columns:1fr; }
+    .list-wrap { min-height: 180px; }
+    .sidebar { order:2; }
+  }
 
-    /* custom labelled time buttons that open the native time picker */
-    .time-control{display:flex;gap:8px;align-items:center}
-    .time-button{
-      appearance:none;
-      -webkit-appearance:none;
-      padding:10px 12px;border-radius:8px;border:1px solid var(--input-border);background:transparent;font-weight:600;cursor:pointer;color:var(--text);
-    }
-    /* hide underlying time inputs visually but keep accessible and focusable */
-    .hidden-time-input{
-      position:absolute;opacity:0;pointer-events:auto;width:1px;height:1px;border:0;padding:0;margin:0;
-    }
-    .sr-only{position:absolute;left:-9999px}
-  </style>
+  @media (max-width:600px) {
+    h1 { font-size: clamp(16px, 4vw, 20px); }
+    .logo { width:38px; height:38px; font-size:16px; }
+  }
+
+  @media (max-width:480px) {
+    body { padding:10px; }
+    .btn, .primary { font-size:12px; padding:8px 10px; }
+    .time-pill { min-width:auto; font-size:12px; padding:6px 8px; }
+  }
+
+  .task-list { position:relative }
+  .move-anim { transition:transform .45s cubic-bezier(.2,.9,.2,1),opacity .3s ease }
+
+  .time-control { display:flex;gap:8px;align-items:center }
+  .time-button {
+    appearance:none;
+    -webkit-appearance:none;
+    padding:10px 12px;border-radius:8px;border:1px solid var(--input-border);background:transparent;font-weight:600;cursor:pointer;color:var(--text);
+  }
+  .hidden-time-input {
+    position:absolute;opacity:0;pointer-events:auto;width:1px;height:1px;border:0;padding:0;margin:0;
+  }
+  .sr-only { position:absolute;left:-9999px }
+</style>
 
 <link rel="manifest" href="manifest.json">
 </head>
