--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>Today's Routine — ADHD Friendly</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -195,7 +195,15 @@ body {
     font-size: 14px;
   }
 }
-
+@media (max-width: 600px) {
+  body {
+    padding: 10px 0; /* less side padding */
+  }
+  .app {
+    margin: 0 auto;
+    padding: 0 10px; /* keeps small space but centers */
+  }
+}
 </style>
 
 <link rel="manifest" href="manifest.json">
