--- a/index.html
+++ b/index.html
@@ -46,25 +46,29 @@
       color:var(--text);
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
-      padding:12px;
+      padding:12px 0;
       -webkit-tap-highlight-color: transparent;
     }
 
     /* center container */
     .app {
-      max-width:980px;
-      margin:10px auto;
-      display:grid;
-      grid-template-columns: 1fr 320px;
-      gap:16px;
-      align-items:start;
-    }
+  width: 100%;
+  max-width: 980px;
+  margin: 10px auto;
+  display: grid;
+  grid-template-columns: 1fr 320px;
+  gap: 16px;
+  align-items: start;
+  box-sizing: border-box;
+  padding: 0 12px; /* inner padding that won't push outside viewport */
+}
 
     .panel {
       background: var(--panel);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
       padding:14px;
+      max-width: 100%;
     }
 
     /* Header */
@@ -182,11 +186,24 @@
 
     /* Drawer */
     .drawer {
-      position: fixed; top:0; left:-320px; width:320px; height:100%; background:var(--panel);
-      box-shadow: 2px 0 20px rgba(0,0,0,0.12); z-index:200; transition:left .28s ease; padding:16px;
-      display:flex; flex-direction:column; gap:12px;
-    }
-    .drawer.open { left:0; }
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%); /* hide off-screen without negative left */
+  width: 320px;
+  height: 100%;
+  background: var(--panel);
+  box-shadow: 2px 0 20px rgba(0,0,0,0.12);
+  z-index: 200;
+  transition: transform .28s ease;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.drawer.open {
+  transform: translateX(0); /* slide in */
+}
     .drawer-header { display:flex; justify-content:space-between; align-items:center; }
     .drawer-overlay {
       position: fixed; inset:0; background: rgba(0,0,0,0.4); opacity:0; visibility:hidden; z-index:190; transition: opacity .2s;
@@ -201,17 +218,17 @@
 
     /* Responsive adjustments (fix scaling & center) */
     @media (max-width:880px){
-      .app {
-        grid-template-columns: 1fr;
-        margin: 0 auto;           /* center and remove extra offsets */
-        max-width: 100%;
-        padding: 0 8px;          /* small side padding */
-      }
-      aside.sidebar { order:2; width:100%; }
-      .list-wrap { max-height: calc(46vh); }
-      .drawer { width: 84%; left: -84%; }
-      .drawer.open { left:0; }
-    }
+  .app {
+    grid-template-columns: 1fr;
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 0 8px;
+  }
+  aside.sidebar { order:2; width:100%; }
+  .list-wrap { max-height: calc(46vh); }
+  .drawer { width: 84%; transform: translateX(-100%); left: 0; } /* transform hide; left:0 ensures consistent baseline */
+  .drawer.open { transform: translateX(0); }
+}
   </style>
 </head>
 <body>
