--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
   .drawer { width: 84%; transform: translateX(-100%); left: 0; } /* transform hide; left:0 ensures consistent baseline */
   .drawer.open { transform: translateX(0); }
 }
+     {
+  outline: 1px solid red !important;
+}
+
   </style>
 </head>
 <body>
